--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family: gilroy;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: gilroy;
 }
-html,body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
-#main{
-    position: relative;
-    overflow: hidden;
+#main {
+  position: relative;
+  overflow: hidden;
 }
 .nav-buttons {
   display: flex;
@@ -30,172 +30,171 @@ body.dark-mode {
   background-color: #000;
   color: #fff;
 }
-body.dark-mode #nav>button,
+body.dark-mode #nav > button,
 body.dark-mode #theme-toggle {
   background-color: #fff;
   color: #000;
 }
-#page{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    background-color: #f1f1f1;
+#page {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f1f1;
 }
-#page1{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    background-color: #f1f1f1;
+#page1 {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f1f1;
 }
-#page2{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    background-color: #f1f1f1;
+#page2 {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f1f1;
 }
-#page3{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    background-color: #f1f1f1;
+#page3 {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f1f1;
 }
-canvas{
-    position: relative;
-    z-index: 9;
-    max-width: 100vw;
-    max-height: 100vh;
+canvas {
+  position: relative;
+  z-index: 9;
+  max-width: 100vw;
+  max-height: 100vh;
 }
-#loop{
-    display: flex;
-    position: absolute;
-    top: 25%;
-    height: 25%;
-    width: 100%;
-    font-size: 100px;
-    white-space: nowrap;
-    font-family: gilroy;
+#loop {
+  display: flex;
+  position: absolute;
+  top: 25%;
+  height: 25%;
+  width: 100%;
+  font-size: 100px;
+  white-space: nowrap;
+  font-family: gilroy;
 }
-#loop>h1{
-    font-weight: 400;
-    animation-name: anim;
-    animation-duration: 15s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+#loop > h1 {
+  font-weight: 400;
+  animation-name: anim;
+  animation-duration: 15s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-#loop>h1>span{
-    -webkit-text-stroke: 1.2px #000;
-    color: transparent;
-    font-weight: 500;
+#loop > h1 > span {
+  -webkit-text-stroke: 1.2px #000;
+  color: transparent;
+  font-weight: 500;
 }
-@keyframes anim{
-    0%{
-        transform: translateX(0%);
-    }
-    100%{
-        transform: translateX(-100%);
-    }
+@keyframes anim {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
-#nav{
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 7%;
-    width: 100%;
-    position: fixed;
-    z-index: 99;
-    padding: 0px 30px;
+#nav {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 7%;
+  width: 100%;
+  position: fixed;
+  z-index: 99;
+  padding: 0px 30px;
 }
-#nav>h3{
-    font-family: gilroy;
-    font-weight: 400;
-    font-size: 22px;
+#nav > h3 {
+  font-family: gilroy;
+  font-weight: 400;
+  font-size: 22px;
 }
-#nav>button{
-    padding: 10px 20px;
-    border-radius: 50px;
-    background-color: #000;
-    color: #fff;
-    border: none;
+#nav > button {
+  padding: 10px 20px;
+  border-radius: 50px;
+  background-color: #000;
+  color: #fff;
+  border: none;
 }
-#page>h3{
-    position: absolute;
-    top: 60%;
-    font-family: gilroy;
-    font-weight: 400;
-    color: #7c7c7c;
-    left: 5%;
+#page > h3 {
+  position: absolute;
+  top: 60%;
+  font-family: gilroy;
+  font-weight: 400;
+  color: #7c7c7c;
+  left: 5%;
 }
-#page>h4{
-    position: absolute;
-    top: 70%;
-    left: 25%;
-    font-family: gilroy;
-    font-weight: 500;
+#page > h4 {
+  position: absolute;
+  top: 70%;
+  left: 25%;
+  font-family: gilroy;
+  font-weight: 500;
 }
-#page1>#right-text{
-    position: absolute;
-    top: 20%;
-    left: 8%;
+#page1 > #right-text {
+  position: absolute;
+  top: 20%;
+  left: 8%;
 }
-#page1>#right-text>h3{
-    font-weight: 400;
-    color: #7c7c7c;
+#page1 > #right-text > h3 {
+  font-weight: 400;
+  color: #7c7c7c;
 }
-#page1>#right-text>h1{
-    line-height: 1.5;
-    font-size: 50px;
+#page1 > #right-text > h1 {
+  line-height: 1.5;
+  font-size: 50px;
 }
-#page1>#left-text{
-    position: absolute;
-    top: 42%;
-    right: 8%;
-    text-align: end;
+#page1 > #left-text {
+  position: absolute;
+  top: 42%;
+  right: 8%;
+  text-align: end;
 }
-#page1>#left-text>h1{
-    font-size: 50px;
-    line-height: 1.5;
+#page1 > #left-text > h1 {
+  font-size: 50px;
+  line-height: 1.5;
 }
-#page1>#left-text>h3{
-    color: #7c7c7c;
-    font-weight: 400;
+#page1 > #left-text > h3 {
+  color: #7c7c7c;
+  font-weight: 400;
 }
-#page2>#text1{
-    position: absolute;
-    top: 30%;
-    left: 10%;
+#page2 > #text1 {
+  position: absolute;
+  top: 30%;
+  left: 10%;
 }
-#page2>#text1>h3{
-    color: #7c7c7c;
-    font-weight: 400;
+#page2 > #text1 > h3 {
+  color: #7c7c7c;
+  font-weight: 400;
 }
-#page2>#text1>h1{
-    font-size: 60px;
-    line-height: 1.5;
+#page2 > #text1 > h1 {
+  font-size: 60px;
+  line-height: 1.5;
 }
-#page2>#text2{
-    position: absolute;
-    top: 55%;
-    right: 4%;
-    text-align: end;
+#page2 > #text2 {
+  position: absolute;
+  top: 55%;
+  right: 4%;
+  text-align: end;
 }
-#page2>#text2>p{
-    color: #7c7c7c;
-    font-weight: 400;
+#page2 > #text2 > p {
+  color: #7c7c7c;
+  font-weight: 400;
 }
-#page3>#text3{
-    position: absolute;
-    top: 30%;
-    right: 8%;
-    text-align: end;
+#page3 > #text3 {
+  position: absolute;
+  top: 30%;
+  right: 8%;
+  text-align: end;
 }
-#page3>#text3>h3{
-    color: #7c7c7c;
-    font-weight: 400;
+#page3 > #text3 > h3 {
+  color: #7c7c7c;
+  font-weight: 400;
 }
-#page3>#text3>h1{
-    font-size: 70px;
-
+#page3 > #text3 > h1 {
+  font-size: 70px;
 }
 body.dark-mode {
   background-color: #000;
@@ -205,7 +204,7 @@ body.dark-mode #page,
 body.dark-mode #page1,
 body.dark-mode #page2,
 body.dark-mode #page3 {
-  background-color: black; 
+  background-color: black;
   color: #e5e5e5;
 }
 body.dark-mode #nav {
@@ -222,47 +221,35 @@ body.dark-mode #loop > h1 > span {
   -webkit-text-stroke: 1.2px #fff;
   color: transparent;
 }
-
-/* Footer styles */
 footer {
   padding: 2rem;
   text-align: center;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
-
-/* Light theme */
 .light footer {
-  background-color: #f9f9f9; /* light background */
-  color: #111; /* dark text */
+  background-color: #f9f9f9;
+  color: #111;
 }
-
 .light footer a {
   color: #111;
 }
-
 .light footer a:hover {
-  color: #6b21a8; /* purple hover */
+  color: #6b21a8;
 }
-
-/* Dark theme */
 .dark footer {
-  background-color: #111; /* dark background */
-  color: #f9f9f9; /* light text */
+  background-color: #111;
+  color: #f9f9f9;
 }
-
 .dark footer a {
   color: #f9f9f9;
 }
-
 .dark footer a:hover {
-  color: #c084fc; /* lighter purple hover */
+  color: #c084fc;
 }
-
 body.dark-mode #nav {
   background-color: transparent !important;
   color: #fff;
 }
-
 body.light-mode #nav {
   background-color: transparent !important;
   color: #000;
